# ha-dali-center

./: .codecov.yml  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  hacs.json  install.sh  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  release.yml  test.yaml  validate.yaml
custom_components/dali_center/: __init__.py  button.py  config_flow.py  const.py  device_trigger.py  event.py  helper.py  light.py  manifest.json  sensor.py  switch.py  types.py
custom_components/dali_center/config_flow_helpers/: __init__.py  entity_helpers.py  ui_helpers.py
custom_components/dali_center/gateway/: __init__.py
custom_components/dali_center/translations/: en.json
tests/: __init__.py  conftest.py  test_button.py  test_config_flow.py  test_const.py  test_device_trigger.py  test_device_trigger_simple.py  test_discovery.py  test_entity_helpers.py  test_event.py  test_helper.py  test_init.py  test_light.py  test_main_interfaces.py  test_sensor.py  test_switch.py  test_types.py  test_ui_helpers.py
workflows/: validate.yaml
